--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: postgres:10.4-alpine
     environment:
         - POSTGRES_PASSWORD=123
-        - POSTGRES_USER=postgress
-        - POSTGRES_DB=apiaTest
+        - POSTGRES_USER=postgres
+        - POSTGRES_DB=postgres
     networks: 
       - lognet
   jenkins:
