--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  postgress:
+  postgres:
     image: postgres:10.4-alpine
     environment:
         - POSTGRES_PASSWORD=123
