--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "testAll": "ts-node src/seed/seed.ts jest --forceExit",
     "ts-node": "ts-node",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
-    "seed": "ts-node src/seed/seed.ts"
+    "seed": "ts-node src/seed/seed.ts",
+    "resyncSchema": "ts-node node_modules/typeorm/cli.js schema:drop && ts-node node_modules/typeorm/cli.js schema:sync"
   },
   "devDependencies": {
     "@types/jest": "^23.1.1",
