--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "ts-node": "ts-node",
+    "test": "jest --forceExit",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
     "seed": "ts-node src/seed/seed.ts",
