--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "baseUrl": ".",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "allowJs": true
     },
     "include": [
         "**/*.ts",
