--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
       context: './'
     environment:
-        - POSTGRES_PASSWORD=123
+        - POSTGRES_PASSWORD=jenkins
         - POSTGRES_USER=postgres
         - POSTGRES_DB=postgres
     networks: 
